force-app/main/default/objects/User_Story__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <description>Specific criteria that must be met for this user story to be considered complete. These criteria define the conditions of satisfaction and help ensure the user story meets its intended purpose.</description>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <defaultValue></defaultValue>
</CustomField>