force-app/main/default/objects/User_Story__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <description>User assigned to work on this user story. The assignee is responsible for implementing the user story and ensuring it meets the acceptance criteria.</description>
    <label>Assignee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <type>Lookup</type>
</CustomField>