force-app/main/default/objects/User_Story__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Detailed description of the user story, including what needs to be built, why it's needed, and any relevant context for developers and stakeholders.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <defaultValue></defaultValue>
</CustomField>