force-app/main/default/objects/User_Story__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <description>Feature that this user story belongs to. User stories are organized under features to group related development work. This is a master-detail relationship, so user stories are automatically deleted when their parent feature is deleted.</description>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>User_Stories</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>