force-app/main/default/objects/User_Story__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current development status of the user story. Tracks progress through the development lifecycle from initial backlog to completion.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Backlog</fullName>
                <default>true</default>
                <label>Backlog</label>
            </value>
            <value>
                <fullName>In_Progress</fullName>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>In_Review</fullName>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>