force-app/main/default/objects/User_Story__c/validationRules/Require_Assignee_When_In_Progress.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Assignee_When_In_Progress</fullName>
    <active>true</active>
    <description>Requires an Assignee to be specified when the Status is set to In Progress. This ensures accountability and proper assignment of work items.</description>
    <errorConditionFormula>AND(
    Status__c = &quot;In_Progress&quot;,
    ISBLANK(Assignee__c)
)</errorConditionFormula>
    <errorDisplayField>Assignee__c</errorDisplayField>
    <errorMessage>Assignee is required when Status is In Progress. Please assign this user story to a team member before marking it as In Progress.</errorMessage>
</ValidationRule>