force-app/main/default/objects/User_Story__c/listViews/Backlog.listView-meta.xml
<ListView>
    <fullName>Backlog</fullName>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Assignee__c</columns>
    <columns>Feature__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Backlog</value>
    </filters>
    <label>Backlog</label>
</ListView>