force-app/main/default/objects/User_Story__c/listViews/My_User_Stories.listView-meta.xml
<ListView>
    <fullName>My_User_Stories</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Feature__c</columns>
    <filterScope>Mine</filterScope>
    <label>My User Stories</label>
</ListView>